// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ImageDoubleText
    block={
        Object {
            "backgroundColor": "foo",
            "image": Object {
              "fields": Object {
                "file": Object {
                  "contentType": "foo",
                  "details": Object {
                    "image": Object {
                      "height": 0,
                      "width": 0,
                    },
                    "size": 0,
                  },
                  "fileName": "foo",
                  "url": "foo",
                },
                "title": "foo",
              },
              "sys": Object {
                "createdAt": "foo",
                "environment": Object {
                  "foo": Object {},
                },
                "id": "foo",
                "locale": "foo",
                "revision": 0,
                "space": Object {
                  "sys": Object {
                    "id": "foo",
                    "linkType": "foo",
                    "type": "foo",
                  },
                },
                "type": "foo",
                "updatedAt": "foo",
              },
            },
            "text1": "foo",
            "text2": "foo",
            "title": "foo",
            "title1": "foo",
            "title2": "foo",
          }
    }
    setRef={[Function]}
    z={0}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="wh100 flex justify-center items-center overflow-hidden"
>
        <div
                className="w100 container-width flex items-center justify-between"
        >
                <div
                        className="circle square"
                        style={
                                Object {
                                        "background": "url(?w=1400&fm=jpg&fl=progressive&q=90) no-repeat center",
                                        "backgroundSize": "cover",
                                      }
                        }
                />
                <div
                        className="col-12 md-col-7 flex flex-column"
                >
                        
                </div>
        </div>
</div>,
      "className": "drip-padding-on-children",
      "style": Object {
        "zIndex": 0,
      },
    },
    "ref": [Function],
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="w100 container-width flex items-center justify-between"
>
          <div
                    className="circle square"
                    style={
                              Object {
                                        "background": "url(?w=1400&fm=jpg&fl=progressive&q=90) no-repeat center",
                                        "backgroundSize": "cover",
                                      }
                    }
          />
          <div
                    className="col-12 md-col-7 flex flex-column"
          >
                    
          </div>
</div>,
        "className": "wh100 flex justify-center items-center overflow-hidden",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="circle square"
              style={
                            Object {
                                          "background": "url(?w=1400&fm=jpg&fl=progressive&q=90) no-repeat center",
                                          "backgroundSize": "cover",
                                        }
              }
/>,
            <div
              className="col-12 md-col-7 flex flex-column"
>
              
</div>,
          ],
          "className": "w100 container-width flex items-center justify-between",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "circle square",
              "style": Object {
                "background": "url(?w=1400&fm=jpg&fl=progressive&q=90) no-repeat center",
                "backgroundSize": "cover",
              },
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                null,
                null,
                null,
                null,
                null,
              ],
              "className": "col-12 md-col-7 flex flex-column",
            },
            "ref": null,
            "rendered": Array [
              null,
              null,
              null,
              null,
              null,
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="wh100 flex justify-center items-center overflow-hidden"
>
          <div
                    className="w100 container-width flex items-center justify-between"
          >
                    <div
                              className="circle square"
                              style={
                                        Object {
                                                  "background": "url(?w=1400&fm=jpg&fl=progressive&q=90) no-repeat center",
                                                  "backgroundSize": "cover",
                                                }
                              }
                    />
                    <div
                              className="col-12 md-col-7 flex flex-column"
                    >
                              
                    </div>
          </div>
</div>,
        "className": "drip-padding-on-children",
        "style": Object {
          "zIndex": 0,
        },
      },
      "ref": [Function],
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="w100 container-width flex items-center justify-between"
>
            <div
                        className="circle square"
                        style={
                                    Object {
                                                "background": "url(?w=1400&fm=jpg&fl=progressive&q=90) no-repeat center",
                                                "backgroundSize": "cover",
                                              }
                        }
            />
            <div
                        className="col-12 md-col-7 flex flex-column"
            >
                        
            </div>
</div>,
          "className": "wh100 flex justify-center items-center overflow-hidden",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="circle square"
                style={
                                Object {
                                                "background": "url(?w=1400&fm=jpg&fl=progressive&q=90) no-repeat center",
                                                "backgroundSize": "cover",
                                              }
                }
/>,
              <div
                className="col-12 md-col-7 flex flex-column"
>
                
</div>,
            ],
            "className": "w100 container-width flex items-center justify-between",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "circle square",
                "style": Object {
                  "background": "url(?w=1400&fm=jpg&fl=progressive&q=90) no-repeat center",
                  "backgroundSize": "cover",
                },
              },
              "ref": null,
              "rendered": null,
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  null,
                  null,
                  null,
                  null,
                  null,
                ],
                "className": "col-12 md-col-7 flex flex-column",
              },
              "ref": null,
              "rendered": Array [
                null,
                null,
                null,
                null,
                null,
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`renders without data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ImageDoubleText
    block={
        Object {
            "fields": Object {
              "backgroundColor": "white",
              "buttonLabel": "",
              "buttonLink": "",
              "drip": false,
              "image": Object {
                "fields": Object {
                  "file": Object {
                    "url": "",
                  },
                  "title": "",
                },
                "sys": Object {
                  "id": "",
                },
              },
              "reverseArrangementX": false,
              "reverseArrangementY": false,
              "smallTitle": "",
              "smallTitleColor": "madison-blue",
              "text1": "",
              "text2": "",
              "title": "",
              "title1": "",
              "title2": "",
            },
          }
    }
    setRef={[Function]}
    z={1}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="wh100 flex justify-center items-center overflow-hidden"
>
        <div
                className="w100 container-width flex items-center justify-between"
        >
                <div
                        className="circle square"
                        style={
                                Object {
                                        "background": "url(?w=1400&fm=jpg&fl=progressive&q=90) no-repeat center",
                                        "backgroundSize": "cover",
                                      }
                        }
                />
                <div
                        className="col-12 md-col-7 flex flex-column"
                >
                        
                </div>
        </div>
</div>,
      "className": "drip-padding-on-children",
      "style": Object {
        "zIndex": 1,
      },
    },
    "ref": [Function],
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="w100 container-width flex items-center justify-between"
>
          <div
                    className="circle square"
                    style={
                              Object {
                                        "background": "url(?w=1400&fm=jpg&fl=progressive&q=90) no-repeat center",
                                        "backgroundSize": "cover",
                                      }
                    }
          />
          <div
                    className="col-12 md-col-7 flex flex-column"
          >
                    
          </div>
</div>,
        "className": "wh100 flex justify-center items-center overflow-hidden",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="circle square"
              style={
                            Object {
                                          "background": "url(?w=1400&fm=jpg&fl=progressive&q=90) no-repeat center",
                                          "backgroundSize": "cover",
                                        }
              }
/>,
            <div
              className="col-12 md-col-7 flex flex-column"
>
              
</div>,
          ],
          "className": "w100 container-width flex items-center justify-between",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "circle square",
              "style": Object {
                "background": "url(?w=1400&fm=jpg&fl=progressive&q=90) no-repeat center",
                "backgroundSize": "cover",
              },
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                null,
                null,
                null,
                null,
                null,
              ],
              "className": "col-12 md-col-7 flex flex-column",
            },
            "ref": null,
            "rendered": Array [
              null,
              null,
              null,
              null,
              null,
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="wh100 flex justify-center items-center overflow-hidden"
>
          <div
                    className="w100 container-width flex items-center justify-between"
          >
                    <div
                              className="circle square"
                              style={
                                        Object {
                                                  "background": "url(?w=1400&fm=jpg&fl=progressive&q=90) no-repeat center",
                                                  "backgroundSize": "cover",
                                                }
                              }
                    />
                    <div
                              className="col-12 md-col-7 flex flex-column"
                    >
                              
                    </div>
          </div>
</div>,
        "className": "drip-padding-on-children",
        "style": Object {
          "zIndex": 1,
        },
      },
      "ref": [Function],
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="w100 container-width flex items-center justify-between"
>
            <div
                        className="circle square"
                        style={
                                    Object {
                                                "background": "url(?w=1400&fm=jpg&fl=progressive&q=90) no-repeat center",
                                                "backgroundSize": "cover",
                                              }
                        }
            />
            <div
                        className="col-12 md-col-7 flex flex-column"
            >
                        
            </div>
</div>,
          "className": "wh100 flex justify-center items-center overflow-hidden",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="circle square"
                style={
                                Object {
                                                "background": "url(?w=1400&fm=jpg&fl=progressive&q=90) no-repeat center",
                                                "backgroundSize": "cover",
                                              }
                }
/>,
              <div
                className="col-12 md-col-7 flex flex-column"
>
                
</div>,
            ],
            "className": "w100 container-width flex items-center justify-between",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "circle square",
                "style": Object {
                  "background": "url(?w=1400&fm=jpg&fl=progressive&q=90) no-repeat center",
                  "backgroundSize": "cover",
                },
              },
              "ref": null,
              "rendered": null,
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  null,
                  null,
                  null,
                  null,
                  null,
                ],
                "className": "col-12 md-col-7 flex flex-column",
              },
              "ref": null,
              "rendered": Array [
                null,
                null,
                null,
                null,
                null,
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
